# flights-mcp

./: Dockerfile  pyproject.toml
src/flights/: __init__.py  api.py  fastmcp.py  server.py
src/flights/services/: search.py
