[project]
name = "flights-mcp"
version = "0.1.0"
description = "Flight search MCP server using Duffel API"
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "python-dotenv",
    "pydantic",
]
license = "MIT"

[project.scripts]
flights-mcp = "flights:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flights"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]

[tool.poetry.dependencies]
fastapi = "^0.110.0"
uvicorn = "^0.29.0"

[tool.poetry]
name = "flights"
packages = [{ include = "flights", from = "src" }]
